# Kitra710C-real-time-plot

./: CMakeLists.txt  README.md  function.c  function.h  lps22hb_temp_pres.c  lps22hb_temp_pres.h  lsm303agr_accel.c  lsm303agr_accel.h  lsm303agr_magn.c  lsm303agr_magn.h  lsm6dsl_accel.c  lsm6dsl_accel.h  lsm6dsl_gyro.c  lsm6dsl_gyro.h  real_time_plot.c  search_device.c  search_device.h
